@@ -1,3 +1,9 @@
+2016-04-24  Ben Elliston  <bje@gnu.org>
+
+	* lib/utils.exp (unsetenv): Remove proc.
+	* doc/dejagnu.texi: Update documentation.
+	* NEWS: Update.
+
 2016-04-19  Nick Clifton  <nickc@redhat.com>
 
 	* baseboards/msp430-sim.exp: New file.
